overflow during animation fix

--- a/components/Card/component.module.css
+++ b/components/Card/component.module.css
@@ -153,6 +153,7 @@
 }
 
 .back {
+    overflow: hidden;
     transform: rotateY(180deg);
     height: 100%;
     width: 100%;
